# datas

./: .gitignore  Hw1.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Hw2.py  README.md  contacts.xlsx  data_p2.csv  practice2_1.py  practice2_2.py  practice2_9.py  pyproject.toml  test02-1.csv  test1.py
Hw_1/: Hw1.ipynb  visual_fun.ipynb
Hw_10/: Hw10.ipynb  practice.ipynb  practice2.ipynb
Hw_11/: Hw11.ipynb  Hw11added_pipeline.ipynb  Hw11added_pipeline2.ipynb
Hw_12/: Hw12.ipynb  Hw12.v1.ipynb  Hw12.v1m.ipynb  Hw12.v1mAdded.ipynb
Hw_2.1/: Hw2.1.ipynb
Hw_2.2/: Hw2.2.ipynb  data_p2v1.csv  data_p2v2.csv
Hw_2.3/: Hw2.3.ipynb
Hw_3/: Hw_3.1.ipynb  Hw_3.1_by_individual_parameters.ipynb
Hw_4/: Hw4.1.ipynb  Hw4.1=OverfittingHomeWork.ipynb  Hw4.1=OverfittingHomeWork=.ipynb  practice.ipynb  practice2.ipynb  practice3.ipynb
Hw_5/: Hw5.1.ipynb  Hw5.v1.ipynb  practice1.py  practice3.py
Hw_6/: Hw6.ipynb  Hw6.v1.ipynb
Hw_7/: Hw7.0.ipynb  Hw7.ipynb  Hw7p.ipynb
Hw_8/: mini.ipynb  practice8.2.ipynb  practice8.3.ipynb  practice8.ipynb  tensorflow_mnist_hw.ipynb  tensorflow_mnist_hw8.ipynb
Hw_9/: Hw9.0.ipynb  Hw9.1.ipynb  Hw9.ipynb  Hw9upg.ipynb  test9.ipynb
helps/: Hw4.1=OverfittingHomeWork=.ipynb  RNN.ipynb  Transformers.ipynb  cml.py  data.txt  datascience.ipynb  dsp.ipynb  dsp2.ipynb  ex10.ipynb  ex10vgg16.ipynb  ex3.ipynb  ex3m.ipynb  ex3test_many.ipynb  ex4.ipynb  ex5.ipynb  ex6.ipynb  ex6mnist.ipynb  ex6s2d.ipynb  ex7hw.ipynb  ex8hw.ipynb  ex8tf.ipynb  ex9.ipynb  exp.ipynb  npe.py  npepd.ipynb  vdata.csv  visual.py  visual_samples.ipynb
practice/: Hw1.py  Hw2.1.py  Hw2.2.py  Hw2.3.py  Hw3.ipynb  Hw3.py  Hw3test2.py  Hw_3.1.0.ipynb  Hw_3.1=4=13.ipynb  Hw_3.many.ipynb  lec2.2.py  practice2_10.py  practice2_11.py  practice2_12.py  practice2_13.py  practice2_14.py  practice2_15.py  practice2_16.py  practice2_17.py  practice2_18.py  practice2_19.py  practice2_20.py  (+13 more)
(+34 files in other folders)
