[tool.poetry]
name = "datas"
version = "0.1.0"
description = ""
authors = ["DenysTantiura <111456850+DenysTantsiura@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
pyqt5 = "^5.15.9"
lxml = "^4.9.2"
tsfresh = "^0.20.1"
kneed = "^0.8.3"
lightgbm = "^3.3.5"
streamlit = "^1.24.1"
tensorflow = "^2.13.0"
opencv-python = "^4.8.0.74"
wandb = "^0.15.8"
tensorboard = "^2.13.0"
more-itertools = "^10.1.0"
albumentations = "^1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
